2011-11-09	Werner Almesberger <werner@almesberger.net>

	PR 1954/cpukit
	* score/cpu/lm32/rtems/score/lm32.h: Protect against macro expansion.

2011-11-09	Werner Almesberger <werner@almesberger.net>

	PR 1957/cpukit
	* score/include/rtems/score/coremutex.h,
	score/inline/rtems/score/threadmp.inl: Add parentheses to protect
	macro arguments.

2011-11-09	Werner Almesberger <werner@almesberger.net>

	PR 1955/cpukit
	* rtems/score/cpu.h: Convert CPU_swap_u16 into a static inline.

2011-09-27	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1914/cpukit
	* rtems/score/cpu.h: Select timestamp implementation.

2011-08-18	Sebastien Bourdeauducq <sebastien.bourdeauducq@gmail.com>

	PR 1868/lm32
	* irq.c: Bugfix.

2011-07-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu.c: Remove /*PAGE markers which were interpreted by a long dead
	print script.

2011-05-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Reformat.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* cpu.c, irq.c, rtems/score/lm32.h:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2010-10-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/cpu.h: Add RTEMS_COMPILER_NO_RETURN_ATTRIBUTE to
	_CPU_Context_restore() because it does not return. Telling GCC this
	avoids generation of dead code.

2010-09-26	 Yann Sionneau <yann@minet.net>

	PR 1697/cpukit
	* rtems/score/cpu.h: lm32 really needs aligned stack. Recent changes
	highlighted that this macro was incorrect.

2010-08-20	<yann.sionneau@telecom-sudparis.eu>

	* rtems/score/lm32.h: Add lm32_read_interrupts().

2010-07-30	Gedare Bloom <giddyup44@yahoo.com>

	PR 1599/cpukit
	* irq.c: Rename _Context_Switch_necessary to _Thread_Dispatch_necessary
	to more properly reflect the intent.

2010-07-29	Gedare Bloom <giddyup44@yahoo.com>

	PR 1635/cpukit
	* rtems/score/cpu.h, rtems/score/types.h: Refactoring of priority
	handling, to isolate the bitmap implementation of priorities in the